# CDPR_86

./: .gitignore  CMakeLists.txt  package.xml  requirements.txt
config/: xbox_cdpr.config.yaml
docs/superpowers/plans/: 2026-06-15-cdpr-split.md
launch/: ekf_with_remote_motor.launch  joystick_control.launch  yesense_ahrs.launch
msg/: CableLengthsStamped.msg
scripts/: build_localization_survey_xlsx.py  calibrate_cdpr_kinematics.py  cdpr.py  cdpr_86.py  cdpr_86_pos.py  cdpr_86_sdo.py  cdpr_euler_ekf.py  cdpr_euler_ekf_ros_node.py  compare_plot.py  estimate_imu_process_noise.py  fk_static_test.py  generate_synthetic_cdpr_calib.py  imu_extrinsic.py  joystick_control.py  motor.py  motor_pos.py  plot_cable_pose_vs_encoder.py  plot_imu_mocap_rpy.py  record_cdpr_calib_data.py  record_d455.py  record_fk_imu_video.py  record_imu_extrinsic_data.py  remote_motor_ekf_bootstrap.py  send_sync.py  track.py
src/: yesense_driver.h
src/cdpr_86_actuator/: CMakeLists.txt  package.xml
src/cdpr_86_actuator/scripts/: cdpr_86.py  codec.py
src/cdpr_86_host/: CMakeLists.txt
src/cdpr_86_host/config/: xbox_cdpr.config.yaml
src/cdpr_86_host/launch/: ekf_with_remote_motor.launch  joystick_control.launch
src/cdpr_86_host/scripts/: calibrate_imu_extrinsic.py  cdpr.py  cdpr_euler_ekf.py  cdpr_euler_ekf_ros_node.py  compare_plot.py  fk_static_test.py  generate_traject.py  jacobian.py  joystick_control.py  track.py  (+2 more)
src/cdpr_86_msgs/: CMakeLists.txt  package.xml
src/cdpr_86_multi_sensor/: CMakeLists.txt  package.xml  requirements.txt
src/yesense_imu/: .gitignore  yesense.md
(+5 files in other folders)
